[package]
name = "bevy_local_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"

serde = { version = "1.0", features = [ "derive"] }
ron = "0.8"
futures-io = "0.3"
web-sys = { version = "0.3", default-features = false, features = [
    "Storage",
    "Window",
] }
