[package]
name = "bevy_local_storage"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.0"

serde = { version = "1", features = [ "derive"] }
ron = "0.8"
futures-io = "0.3"
web-sys = { version = "0.3", default-features = false, features = [
    "Storage",
    "Window",
] }
stackfuture = "0.3"
